fixing additional issues identified in Sonar